@@ -56,8 +56,7 @@ public class SwaggerConfig {
             }
             private <T extends RequestMappingInfoHandlerMapping> void customizeSpringfoxHandlerMappings(List<T> mappings) {
                 List<T> copy = mappings.stream()
-                        .filter(mapping -> mapping.getPatternParser() == null)
-                        .collect(Collectors.toList());
+                        .filter(mapping -> mapping.getPatternParser() == null).toList();
                 mappings.clear();
                 mappings.addAll(copy);
             }
